# BoringAuth

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  README.md
include/: boringauth.h
src/: lib.rs
src/oath/: hotp.rs  mod.rs  totp.rs
src/parser/: hex.rs
src/pass/: mod.rs  phc_encoding.rs
tests/: Makefile  boringauth_test.py  test_boringauth.c  test_hotp.c  test_pass.c  test_totp.c
