[package]
name = "boringauth"
version = "0.6.1"
authors = ["Rodolphe Breard <rodolphe@what.tf>", "YetAnotherMinion <yam@thinkalexandria.com>"]
description = "Straightforward password, passphrase, TOTP, and HOTP user authentication"
#documentation = "https://todo.txt"
repository = "https://github.com/ThinkAlexandria/BoringAuth.git"
readme = "README.md"
keywords = ["authentication", "2fa", "otp", "hotp", "totp"]
license = "GPL-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE.txt"]

[lib]
name = "boringauth"
crate-type = ["rlib", "dylib"]

[features]
cbindings = ["libc"]

[dependencies]
ring = "0.9"
base32 = "^0.3.0"
time = "^0.1.31"
rand = "0.3.15"
nom = "^2.2.1"

[dependencies.libc]
version = "^0.1.8"
optional = true
