[package]
name = "boringauth"
version = "0.7.0"
authors = ["Rodolphe Breard <rodolphe@what.tf>", "YetAnotherMinion <yam@thinkalexandria.com>"]
description = "Straightforward password, passphrase, TOTP, and HOTP user authentication"
documentation = "https://docs.rs/boringauth"
repository = "https://github.com/ThinkAlexandria/BoringAuth.git"
readme = "README.md"
keywords = ["authentication", "2fa", "otp", "hotp", "totp"]
license = "GPL-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE.txt"]

[lib]
name = "boringauth"
crate-type = ["rlib", "dylib"]

[features]
cbindings = ["libc"]

[dependencies]
ring = "0.13"
base32 = "^0.3.0"
time = "^0.1.31"
rand = "0.5.0"
hex = "0.3.2"

[dependencies.libc]
version = "^0.2"
optional = true
